@@ -46,6 +46,7 @@ The following output formats are available:
 
 - `raw` (encode the generated bytes as raw bytes)
 - `base64` (encode the generated bytes as [base64])
+- `base64url` (encode the generated bytes as [URL-safe base64])
 - `hex` (encode the generated bytes as hex string)
 
 The default output format is `raw`. To change this, use `-f` option.
@@ -150,7 +151,8 @@ licensing information.
 [license-badge]: https://img.shields.io/crates/l/randgen?style=for-the-badge
 [release page]: https://github.com/sorairolake/randgen/releases
 [BUILD.adoc]: BUILD.adoc
-[base64]: https://en.wikipedia.org/wiki/Base64
+[base64]: https://datatracker.ietf.org/doc/html/rfc4648#section-4
+[URL-safe base64]: https://datatracker.ietf.org/doc/html/rfc4648#section-5
 [ISAAC]: https://www.burtleburtle.net/bob/rand/isaacafa.html
 [Mersenne Twister]: https://www.math.sci.hiroshima-u.ac.jp/m-mat/MT/emt.html
 [PCG]: https://www.pcg-random.org/
