@@ -4,20 +4,21 @@
 
 = randgen(1)
 // Specify in UTC.
-:docdate: 2025-03-10
+:docdate: 2025-03-11
 :revnumber: 0.1.0
 :doctype: manpage
 :mansource: randgen {revnumber}
 :manmanual: General Commands Manual
-:enwp-article-url: https://en.wikipedia.org/wiki
 :isaac-url: https://www.burtleburtle.net/bob/rand/isaacafa.html
 :mt-url: https://www.math.sci.hiroshima-u.ac.jp/m-mat/MT/emt.html
 :pcg-url: https://www.pcg-random.org/
 :sfc-url: https://pracrand.sourceforge.net/RNG_engines.txt
 :chacha-url: https://cr.yp.to/chacha.html
 :xorshift-url: https://prng.di.unimi.it/
-:hc-128-url: {enwp-article-url}/HC-128
-:base64-url: {enwp-article-url}/Base64
+:hc-128-url: https://en.wikipedia.org/wiki/HC-128
+:datatracker-html-doc: https://datatracker.ietf.org/doc/html
+:base64-url: {datatracker-html-doc}/rfc4648#section-4
+:base64url-url: {datatracker-html-doc}/rfc4648#section-5
 :getrandom-man-page-url: https://man7.org/linux/man-pages/man2/getrandom.2.html
 :sysexits-man-page-url: https://man.openbsd.org/sysexits
 :repo-url: https://github.com/sorairolake/randgen
@@ -74,6 +75,11 @@ _BYTES_::
 
       Encode the generated bytes as {base64-url}[base64]. This value is
       available if the `base64` feature is enabled at compile time.
+
+    *base64url*::::
+
+      Encode the generated bytes as {base64url-url}[URL-safe base64]. This
+      value is available if the `base64` feature is enabled at compile time.
 
     *hex*::::
 
