@@ -142,6 +142,7 @@ impl Generator for Shell {
 }
 
 #[derive(Clone, Debug, Default, Eq, PartialEq, ValueEnum)]
+#[value(rename_all = "lower")]
 pub enum Format {
     /// Encode the generated bytes as raw bytes.
     #[default]
@@ -150,6 +151,10 @@ pub enum Format {
     /// Encode the generated bytes as base64.
     #[cfg(feature = "base64")]
     Base64,
+
+    /// Encode the generated bytes as URL-safe base64.
+    #[cfg(feature = "base64")]
+    Base64Url,
 
     /// Encode the generated bytes as hex string.
     #[cfg(feature = "hex")]
