@@ -16,6 +16,11 @@ project adheres to https://semver.org/[Semantic Versioning].
 
 == {compare-url}/v0.1.0\...HEAD[Unreleased]
 
+=== Added
+
+* Supports encoding the generated bytes as URL-safe base64
+  ({pull-request-url}/7[#7])
+
 === Fixed
 
 * Fix broken pipe error when piping ({pull-request-url}/5[#5])
